Account Receivables: Initial version

--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,3 +1,18 @@
 <div class="accounts-receivables">
-    SUDAH MASUK KE ACCOUNT NIH COY
+	<div class="search-container" *ngIf="getSearch().searchBox">
+		<div class="search-box">
+			<input type="text" id="AccSearchBox" placeholder="Enter Store Name or Number"/>
+		</div>
+	</div>
+	<div class="container-body">
+		<div class="header">
+			<div class="text">
+				<div class="header-text">Total Receivables : 3,450.00 &#x20a7;</div>
+			</div>
+		</div>
+	</div>
+
+	
+
 </div>
+
