--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -1,5 +1,55 @@
-.account-receivables {
+.accounts-receivables {
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
+    background-color: #FFF;
+    .container-body {
+        background-color: white;
+        width: 100%;
+        height: 100%;
+        .header {
+            display: inline-block;
+            width: 100%;
+            border-bottom: 1px solid #000;
+            background-size: cover;
+            height: 40px;
+            .void {
+                display: inline-block;
+                width: 100%;
+                height: 136px;
+            }
+            .text {
+                display: inline-block;
+                background-color: #FFF;
+                width: 100%;
+                padding: 10px;
+                height: 25px;
+
+                .header-text{
+	                text-align: center;	
+	                font-weight: 500;
+	                font-size: 17px;
+	                font-family: Arial;
+				}
+            }
+        }
+        
+    }
+
+    .search-container{
+		background-color: #C0C0C0;
+        width: 100%;
+        display: block;
+        clear: left;
+       
+            .search-box{
+            	color: $grey-text;
+            	font-size: 15px;
+            	display: inline-block;
+            	height: 31px;
+            	border: 1px solid #A6A6A6;
+            	width: 100%;
+            	margin: auto;
+            }
+    }
 }
