--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -33,17 +33,28 @@
             background-position: center center;
             cursor: pointer;
         }
-         .filter{
-                width:48px;
-                height:48px;
-                position: fixed;
-                right: 0;
-                z-index: 1000;
-                background: url("../img/icon-idsp/filter.png") no-repeat;
-                background-size: 30px;
-                background-position: center center;
-                cursor: pointer;
-            }
+        .filter{
+              width:48px;
+              height:48px;
+              position: fixed;
+              right: 0;
+              z-index: 1000;
+              background: url("../img/icon-idsp/filter.png") no-repeat;
+              background-size: 30px;
+              background-position: center center;
+              cursor: pointer;
+          }
+        .search{
+            width:48px;
+            height:48px;
+            position: fixed;
+            right: 0;
+            z-index: 1000;
+            background: url("../img/icon-idsp/search-white.png") no-repeat;
+            background-size: 30px;
+            background-position: center center;
+            cursor: pointer;
+        }
       }
     }
 
