fixed layout; account-receivables-service has array error

--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -43,7 +43,7 @@
         clear: left;
        
             .search-box{
-            	color: $grey-text;
+            	color: $grey;
             	font-size: 15px;
             	display: inline-block;
             	height: 31px;
