--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -15,7 +15,10 @@
 
 <div class="container-body">
 
-	<div class="filter-container" *ngIf="getFilter().filterInventoryLoad && vLoadShow">
+	<div class="filter-container-i" *ngIf="getFilter().filterInventoryLoad && vLoadShow">
+		<div class="filter-input">
+			<input type="text"/>
+		</div>
 		<div class="filter-label">Load</div>
 		<div class="filter-dropdown"><select name="cars">
 		  <option value="volvo">SSS</option>
@@ -25,7 +28,7 @@
 		</select></div>
 	</div>
 
-	<div class="filter-container" *ngIf="getFilter().filterInventoryPhysical && vPhysicalShow">
+	<div class="filter-container-i" *ngIf="getFilter().filterInventoryPhysical && vPhysicalShow">
 		<div class="filter-label">Phy</div>
 		<div class="filter-dropdown"><select name="cars">
 		  <option value="volvo">SSS</option>
