--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -20,7 +20,7 @@ $border-line : #BFBFBF;
 //header
 $deep-cyan : #007879;
 
-$iris-blue : #01BABF;
+$iris-blue : #DCE6F2;
 $white-smoke : #F2F2F2;
 
 //
