--- a/src/app/scss/_inventory.scss
+++ b/src/app/scss/_inventory.scss
@@ -10,4 +10,52 @@
             text-align: center;
 		}
     }
+
+    .filter-container-i{
+            background-color: $white-smoke;
+            width: 100%;
+            display: block;
+            clear: left;
+            height: 160px;
+        .filter-label {
+            font-size: $filter-label;
+            color: #000;
+            padding-top: 20px;
+            padding-left: 10px;
+            float: left;
+        }
+        .filter-dropdown {
+            padding-top: 15px;
+            padding-left: 70px;
+            select {
+                background: $white;
+                height: 31px;
+                border: 1px solid $dark-grey;
+                width: 90%;
+                -webkit-appearance: none;
+                border-radius: 7px;
+                padding-left: 15px;
+                font-size: $filter-select;
+                appearance: none;
+                @media screen and (-webkit-min-device-pixel-ratio: 0) {
+                    background-image: url(#{$select-arrow});
+                    background-position: right 0 top 50%;
+                    background-repeat: no-repeat;
+                }
+            }
+        }
+        .filter-input {
+            input {
+                margin: 4%;
+                background: $white;
+                height: 31px;
+                border: 1px solid $dark-grey;
+                width: 90%;
+                -webkit-appearance: none;
+                border-radius: 4px;
+                font-size: $filter-select;
+                appearance: none;
+            }
+        }
+    }
 }
