--- a/src/app/index.html
+++ b/src/app/index.html
@@ -31,6 +31,9 @@
 	</head>
 	<body style="margin: 0px">
 		<idsp-app>
+			<div id="splash" class="backgroundImage">
+	            <div class="picture"></div>
+	        </div>
 		</idsp-app>
 		<!-- start scripts-->
 		<script src="init.js"></script>
