updated global css (lighter the borders and fonts), added closeday pages

--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -1,19 +1,19 @@
  <div class="sub-main-menu">
      <div class="container-body">
          <div class="sub-main-button">
-             <div class="button-identifier" (click)="toggleTargetActual()">Targets &amp; Actuals</div>
+             <div class="button-identifier" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
          </div>
           <div class="separator"></div>
           <div class="sub-main-button">
-             <div class="button-identifier" (click)="toggleVisitedRetail()">Visited Retailer Today</div>
+             <div class="button-identifier" (click)="goToVisitedRetailer()">Visited Retailer Today</div>
          </div>
           <div class="separator"></div>
            <div class="sub-main-button">
-             <div class="button-identifier" (click)="toggleCollection()">Collection &amp; Remittance</div>
+             <div class="button-identifier" (click)="goToCollection()">Collection &amp; Remittance</div>
          </div>
           <div class="separator"></div>
            <div class="sub-main-button">
-             <div class="button-identifier" (click)="toggleStockReturn()">Stock Return</div>
+             <div class="button-identifier" (click)="goToStockReturn()">Stock Return</div>
          </div>
           <div class="separator"></div>
           <div class="sub-main-button">
