--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -1,4 +1,3 @@
-
 .sub-menu-week
 {
 	display: block;
@@ -20,6 +19,7 @@
     	font-size: $header-tab;
          &.active{
             color: $white;
+            font-weight: bold;
         }
    }
 }
@@ -82,6 +82,6 @@
     }
 
     .divider {
-         border: 1px solid $border-line;
+        border-bottom: 1px solid #BFBFBF;
     }
 }
