account receivable search box

--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,18 +1,15 @@
-<div class="accounts-receivables">
-	<div class="search-container" *ngIf="getSearch().searchBox">
-		<div class="search-box">
-			<input type="text" id="AccSearchBox" placeholder="Enter Store Name or Number"/>
-		</div>
+<div class="filter-container" *ngIf="getSearch().searchBox">
+	<div class="filter-input">
+		<input type="text" id="AccSearchBox" placeholder="Input Retailer Name or MIN"/>
 	</div>
-	<div class="container-body">
-		<div class="header">
-			<div class="text">
-				<div class="header-text">Total Receivables : 3,450.00 &#x20a7;</div>
-			</div>
-		</div>
+</div>
+<div class="container-body">
+	<div class="item-container">
+		<div class="item-title">Total Receivables : 3,450.00 &#x20a7;</div>
 	</div>
+</div>
+
 
 	
 
-</div>
 
