reconfigured splash screen

--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -21,7 +21,7 @@
           text-align: center;
           color: $white;
           font-size: $header-title;
-          padding-top: 10px;
+          padding-top: 0.7em;
           font-weight: lighter;
         }
         .back{
