--- a/src/app/index.html
+++ b/src/app/index.html
@@ -25,7 +25,7 @@
 	    <script src="scripts/http.dev.js"></script>
 	    <script src="scripts/fastclick.js"></script>    
 	    <script src="scripts/nouislider.js"></script>
-	    <script src="scripts/cordova.js"></script>
+	    <!-- <script src="scripts/cordova.js"></script> -->
 	    <script src="scripts/cordova-ui-addon.js"></script>
 
 	</head>
