--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -33,23 +33,84 @@
 				}
             }
         }
+
+        .item-container {
+            display: inline-block;
+            width: calc(100% - 20px);
+            padding-left: 10px;
+            padding-right: 10px;
+            border-bottom: 1px solid #BFBFBF;
+            cursor: pointer;
+           
+            .item-icon {
+                height: 30px;
+                width: 30px;
+                float: right;
+                color: #000;
+                font-size: 17px;
+                text-align: center;
+                &.open-sub-item {
+                    background: url("../img/icon-idsp/path-right-grey.png")no-repeat;
+                    background-position-x: center;
+                    background-position-y: 7px;
+                    background-size: 13px;
+                }
+                &.selected
+                {
+                    transform: rotate(180deg);
+                }
+            }
+            .item-identifier {
+                color: #7F7F7F;
+                font-size: 18px;
+                margin-right: 10px;
+                margin-top: 10px;
+                &.single-line {
+                    width: 125px;
+                    float: left;
+                }
+                &:after {
+                    clear: both;
+                }
+                .item-header{
+                    font-size: 20px;
+                    font-weight: 500;
+                    margin-bottom: 5px;
+                    color: #A8A8A8;
+                }
+                .item-text{
+                    font-size: 18px;
+                    margin-top:5px;
+                    position: right;
+                    text-align: right;
+                    margin-right: 20px;
+                }
+            }
+
+        }
         
     }
 
     .search-container{
-		background-color: #C0C0C0;
+		background-color: #E0E0E0;
         width: 100%;
         display: block;
         clear: left;
+        height: 100%;
        
-            .search-box{
-            	color: $grey;
-            	font-size: 15px;
-            	display: inline-block;
-            	height: 31px;
-            	border: 1px solid #A6A6A6;
-            	width: 100%;
-            	margin: auto;
+            .search-box{         	
+            	margin: ;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                display: block;
+
+                .inner-editor{
+                    font-size: 20px;
+                    border: none;  
+                }
             }
     }
+
+
 }
