added visiter retail page , updated footer scss

--- a/src/app/scss/_footer.scss
+++ b/src/app/scss/_footer.scss
@@ -6,7 +6,7 @@ background-color: $footer-background;
 z-index: 90;
 position: fixed;
 bottom: -1px;
-border-top: 1px solid #bcbac1;
+//border-top: 1px solid #bcbac1;
   .column {
     width: 25%;
     float: left;
