--- a/src/app/scss/_splash.scss
+++ b/src/app/scss/_splash.scss
@@ -3,7 +3,7 @@
 	//height: 100%;
 	.picture{
 		margin-top: 0;
-		height: 40em;
+		height: 200px;
 		width: 100%;
 		background: url(../img/smart-logo.png) no-repeat;
 		background-position: center center;
