--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -257,7 +257,7 @@ LIST VIEW - ICON - ARROW DOWN
     .item-sub-container {
         display: inline-block;
         width: 100%;
-        border-bottom: 1px solid #BFBFBF;
+        border-top: 1px solid #BFBFBF;
         cursor: pointer;
         background-color: #EEE;
         .item-icon {
