--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -7,6 +7,8 @@
 
 body{
 	font-family: 'HelveticaNeue-Light';
+	overflow-x: hidden;
+	position: relative;
 	// font-family: 'Roboto', sans-serif;
 	// font-family: Futura, Arial, sans-serif;
 	//font-family: 'Calibri', sans-serif;
