UI GRID LIST DONE

--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -20,7 +20,8 @@ $border-line : #BFBFBF;
 //header
 $deep-cyan : #007879;
 
-$iris-blue : #DCE6F2;
+$azure-white : #DCE6F2;
+$iris-blue : #01BABF;
 $white-smoke : #F2F2F2;
 
 //
