--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -32,7 +32,7 @@
         
         .item-title-ta{   
             font-size: 20px;
-            background-color: $iris-blue;
+            background-color: $azure-white;
             padding-left: 2%;
         }
 
