--- a/src/app/scss/_inventory.scss
+++ b/src/app/scss/_inventory.scss
@@ -1,22 +1,36 @@
 
 .container-body {
-    .item-container {
+    .item-container-i {
+        display: inline-block;
+        width: 100%;
+        cursor: pointer;
+
+        &.border {
+            border-bottom: 2px solid $border-line;
+        }
+
         .item-notification {   
-            font-size: $content-normal;
+            font-size: $filter-select;
             background-color: $iris-blue;
             padding-top: 5px;
             padding-bottom: 5px;
             color: $white;
             text-align: center;
-		}
+        }
     }
-
     .filter-container-i{
-            background-color: $white-smoke;
-            width: 100%;
-            display: block;
-            clear: left;
-            height: 160px;
+        background-color: $white-smoke;
+        width: 100%;
+        display: block;
+        clear: left;
+
+        &.load {
+            height: 215px;
+        }
+        &.physical {
+            height: 260px;
+        }
+
         .filter-label {
             font-size: $filter-label;
             color: #000;
@@ -26,7 +40,7 @@
         }
         .filter-dropdown {
             padding-top: 15px;
-            padding-left: 70px;
+            padding-left: 150px;
             select {
                 background: $white;
                 height: 31px;
@@ -46,7 +60,7 @@
         }
         .filter-input {
             input {
-                margin: 4%;
+                margin: 4.5%;
                 background: $white;
                 height: 31px;
                 border: 1px solid $dark-grey;
@@ -54,7 +68,7 @@
                 -webkit-appearance: none;
                 border-radius: 4px;
                 font-size: $filter-select;
-                appearance: none;
+                text-align: center;
             }
         }
     }
