--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -8,8 +8,13 @@ SUBMENU
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
+    overflow: hidden;
+    position: relative;
     .container-body {
         background-color: $dark-cyan;
+        overflow-x: hidden;
+        position: relative;
+        margin-bottom: 50px;
         .separator {
             border-bottom: 1px solid $white;
             margin-bottom: 2px;
