--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -84,7 +84,8 @@ LIST VIEW - BUTTON
     background-color: $white;
     width: 100%;
     height: 100%;
-
+    margin-bottom: 50px;
+    overflow-x: hidden;
     .no-divider {
         width: 100%;
         float:left;
