--- a/src/app/app/my-transaction/components/dsp-alerts.component.html
+++ b/src/app/app/my-transaction/components/dsp-alerts.component.html
@@ -1,3 +1,63 @@
 <div class="dsp-alerts">
-    SUDAH MASUK KE DSP Alerts BRO
+    <div class="filter-container" *ngIf="getFilter().filterDSPAlerts">
+		<div class="filter-input">
+			<input type="text" id="AccSearchBox" placeholder="Input Retailer Name or MIN"/>
+		</div>
+	</div>
+    <div class="threshold-list">
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    	<div>
+    		<div class="route">#Route 2</div>
+    		<div class="retailer-name">Gloria Cell</div>
+    		<div class="retailer-detail">
+    			<div class="retailer-detail-left">Value Segment</div><div class="retailer-detail-right"> ????? </div>
+    			<div class="retailer-detail-left">Threshold hit</div><div class="retailer-detail-right"> High </div>
+    		</div>
+    		<hr>
+    	</div>
+    </div>
 </div>
