--- a/src/app/scss/_dsp-alerts.scss
+++ b/src/app/scss/_dsp-alerts.scss
@@ -1,5 +1,14 @@
 .dsp-alerts {
-    //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
+
+
+    .filter-container{
+    	height : 20%;
+    }
+
+    .threshold-list{
+    	height : 80%;
+    	overflow-x:hidden;
+    }
 }
