--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -24,6 +24,9 @@ $azure-white : #DCE6F2;
 $iris-blue : #01BABF;
 $white-smoke : #F2F2F2;
 
+//background sub item
+$whisper : #EEEEEE;
+
 //
 $light-grayish-blue : #DCE6F2;
 $menu-underline : #ED135B;
