--- a/src/app/app/basic-call-procedure/components/detail-retailer.component.html
+++ b/src/app/app/basic-call-procedure/components/detail-retailer.component.html
@@ -1,5 +1,101 @@
     <div class="container-body">
         <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single title bold'>Gloria Cell</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+        <div class="item-container" (click)="subMenuShow()">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Retailer Owner</div></div>
+                    <div class='container'><div class='cell single'>Ms. Gloria</div></div>
+                </div>
+                <div class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></div>
+            </div>
+        </div>
+
+        <div class="item-container sub" *ngIf="vMenuShow">
+            <div class="container border">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Civil Status</div></div>
+                    <div class='container'><div class='cell single'>Single</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+            <div class="container border">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Email Address</div></div>
+                    <div class='container'><div class='cell single'>gloria@yahoo.com</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+            <div class="container border">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Gender</div></div>
+                    <div class='container'><div class='cell single'>Female</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>BOD</div></div>
+                    <div class='container'><div class='cell single'>12 June 1999</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+
+
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Mobile Number</div></div>
+                    <div class='container'><div class='cell single'>2345</div></div>
+                </div>
+                <a href="tel:1234566" class='cell icon call'></a>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Address</div></div>
+                    <div class='container'><div class='cell single'>Barangka</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Amount Receivable</div></div>
+                    <div class='container'><div class='cell single'>Barangka</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Value Segment</div></div>
+                    <div class='container'><div class='cell single'>Barangka</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Threshold</div></div>
+                    <div class='container'><div class='cell single'>Barangka</div></div>
+                </div>
+                <div class='cell icon'></div>
+            </div>
+        </div>
+
+        <!--<div class="item-container">
             <div class="item-identifier">
                 <div class="item-title"><div *ngIf="getRetailerAll()">{{getRetailerAll().storeName}}</div></div>
             </div>
@@ -54,5 +150,5 @@
         <div class="item-container">
             <div class="item-identifier">Threshold</div>
             <div class="item-value"></div>
-        </div>
+        </div>-->
     </div>
