--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -95,18 +95,17 @@
 			<div class="item-notification">LOAD AS OF 04/12/2016 10.00 AM</div>
 		</div>
 
-
-		<div class="item-container">
+		<div class="item-container" (click)="subMenuShow()">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell left bold'>Smartload</div></div>
+			        <div class='container'><div class='cell left bold' [ngClass]="{title: vSubMenuShow}">Smartload</div></div>
 			        <div class='container'><div class='cell left grey' *ngIf="!vSubMenuShow">Ending Balance</div></div>
 			    </div>
 				<div class='cell'>
 			        <div class='container'><div class='cell right'></div></div>
-			        <div class='container'><div class='cell right bold'  *ngIf="!vSubMenuShow">500</div></div>
+			        <div class='container'><div class='cell right bold' *ngIf="!vSubMenuShow">500</div></div>
 			    </div>
-			    <a (click)="subMenuShow()" class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></a>
+			    <div class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></div>
 			</div>
 		</div>
 
@@ -132,30 +131,7 @@
 			        <div class='container'><div class='cell right'>100</div></div>
 			        <div class='container'><div class='cell right bold'>500</div></div>
 			    </div>
-			    <div class='cell icon call'></div>
-			</div>
-		</div>
-
-		<div class="item-container">
-			<div class="container">
-				<div class='cell'>
-			        <div class='container'><div class='cell single grey'>Retailer Owner</div></div>
-			        <div class='container'><div class='cell single'>Ms. Gloria</div></div>
-			    </div>
-			    <a (click)="subMenuShow()" class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></a>
-			</div>
-		</div>
-
-
-		<div class="item-container">
-			<div class="container">
-				<div class='cell'>
-			        <div class='container'><div class='cell single bold deep-cyan'># Route 1</div></div>
-			        <div class='container'><div class='cell single bold'>Gloria Cell</div></div>
-			        <div class='container'><div class='cell single'>Ms. Gloria</div></div>
-			        <div class='container'><div class='cell single'>Barangka Dr. Mandaluyong</div></div>
-			    </div>
-			    <a (click)="subMenuShow()" class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></a>
+			    <div class='cell icon'></div>
 			</div>
 		</div>
 	</div>
@@ -164,7 +140,6 @@
 		<div class="item-container-i">
 			<div class="item-notification">PHYSICAL AS OF 04/12/2016 10.00 AM</div>
 		</div>
-		<div class=
 	</div>
 	
 </div>
