dsp alerts layout

--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -34,7 +34,7 @@
         
         <div class="sub-main-button">
             <div class="button-identifier" (click)="goToDSPAlerts()" id="dsp-alerts">
-                DSP Alerts
+                Alerts & Threshold
             </div>
         </div>
     </div>
