--- a/src/app/app/my-transaction/components/dsp-alerts.component.html
+++ b/src/app/app/my-transaction/components/dsp-alerts.component.html
@@ -1,3 +1,59 @@
-<div class="dsp-alerts">
-    SUDAH MASUK KE DSP Alerts BRO
+	<div class="filter-container-dsp" *ngIf="getFilter().filterInventoryLoad && vLoadShow">
+		<div class="two-col">
+			<div class="two-col-child-40">
+				<div class="filter-label">Value Segment</div>
+			</div>
+			<div class="two-col-child-60">
+				<div class="filter-dropdown">
+					<select name="cars">
+					  <option value="volvo">High</option>
+					  <option value="saab">Medium</option>
+					  <option value="fiat">Low</option>
+					</select>
+				</div>
+			</div>
+		</div>
+
+		<div class="two-col">
+			<div class="two-col-child-40">
+				<div class="filter-label">Threshold</div>			
+			</div>
+			<div class="two-col-child-60">
+				<div class="filter-input">
+					<input type="text"/>
+				</div>
+			</div>
+		</div>
+		<div class="float-bottom">
+		</div>
+
+	</div>
+
+<div class="container-body">
+	<div class="filter-container-i" *ngIf="getFilter().filterInventoryPhysical && vPhysicalShow">
+		<div class="filter-label">Phy</div>
+		<div class="filter-dropdown"><select name="cars">
+		  <option value="volvo">SSS</option>
+		  <option value="saab">Saab</option>
+		  <option value="fiat">Fiat</option>
+		  <option value="audi">Audi</option>
+		</select></div>
+	</div>
+
+	<div *ngIf="vLoadShow">
+		<div class="item-container">
+			<div class="item-notification">LOAD AS OF 04/12/2016 10.00 AM</div>
+		</div>
+		<div class="item-container">
+			<div class="item-identifier">SmartLoad</div>
+			<div class="item-value">Ending Balance</div>
+			<div class="item-icon arrow-down"></div>
+		</div>
+		<div class="item-container">
+			<div class="item-identifier">SKU1</div>
+			<div class="item-value">Ending Balance</div>
+			<div class="item-icon arrow-down selected"></div>
+		</div>
+	</div>
+	
 </div>
