added controllers and services and route

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -7,7 +7,7 @@
 	<!--<div *ngIf="getFilter().filterTargetsActuals" >-->
 	<div class="filter-container" *ngIf="getFilter().filterTargetsActuals">
 		<div class="filter-label">Brand</div>
-		<div class="filter-dropdown"><select name="cars">
+		<div class="filter-dropdown"><select name="brand" id="brand-lov">
 		  <option value="volvo">Volvo</option>
 		  <option value="saab">Saab</option>
 		  <option value="fiat">Fiat</option>
