update account receivables

--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,10 +1,12 @@
-<div class="container-body">
+<div class="accounts-receivables">	
 	<div class="filter-container" *ngIf="getSearch().searchBox">
-		<div class="filter-input">	
-			<input [(ngModel)]="vTotal" id="RetailerSearchBox" placeholder="Input Store Name or Number" />
+		<div class="filter-input input">					
+			<input [(ngModel)]="vTotal" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN" />
 		</div>	
 	</div>
+</div>
 
+<div class="container-body">
 	<div class="item-container">
         <div class="container">
             <div class='cell'>
