account receivable search box

--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -17,7 +17,7 @@
         .filter-input{
             padding-top: 7px;
             padding-left: 24px;
-            &.input {
+            input {
                 background: $white;
                 height: 30px;
                 border: 1px solid $dark-grey;
