--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,5 +1,5 @@
 <div class="accounts-receivables">	
-	<div class="filter-container" *ngIf="getFilter().filterTargetsActuals">
+	<div class="filter-container" *ngIf="getFilter().filterAccReceivables">
 		<div class="filter-input input">	
 			<input #box (keyup)="onKey(box.value)" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN"/>
 		</div>	
