add cordova configuration

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,7 +29,7 @@
 	    <script src="scripts/cordova-ui-addon.js"></script>
 
 	</head>
-	<body style="margin: 0px">
+	<body style="margin: 0px" onload="onLoad()">
 		<idsp-app>
 			<div id="splash" class="backgroundImage">
 	            <div class="picture"></div>
