--- a/src/app/scss/_retailer-route.scss
+++ b/src/app/scss/_retailer-route.scss
@@ -1,3 +1,55 @@
+.container-body {
+    .filter-container-ret-route{
+        background-color: $white-smoke;
+        width: 100%;
+        display: block;
+        clear: left;
+        height: 60px;
+
+        .filter-label {
+            font-size: $filter-label;
+            color: #000;
+            padding-top: 20px;
+            padding-left: 10px;
+            float: left;
+        }
+        .filter-dropdown {
+            padding-top: 15px;
+            padding-left: 150px;
+            select {
+                background: $white;
+                height: 31px;
+                border: 1px solid $dark-grey;
+                width: 90%;
+                -webkit-appearance: none;
+                border-radius: 7px;
+                padding-left: 15px;
+                font-size: $filter-select;
+                appearance: none;
+                @media screen and (-webkit-min-device-pixel-ratio: 0) {
+                    background-image: url(#{$select-arrow});
+                    background-position: right 0 top 50%;
+                    background-repeat: no-repeat;
+                }
+            }
+        }
+        .filter-input {
+            input {
+                margin: 4.5%;
+                background: $white;
+                height: 31px;
+                border: 1px solid $dark-grey;
+                width: 90%;
+                -webkit-appearance: none;
+                border-radius: 4px;
+                font-size: $filter-select;
+                text-align: center;
+            }
+        }
+    }
+}
+
+/*
 .retailer-route {
     //padding-bottom: 45px;
      z-index: 1;
@@ -45,7 +97,7 @@
             margin-top: 10px;
             cursor: pointer;
             
-		    /* Month header */
+
 			.month {
 			    padding: 70px 25px;
 			    width: 100%;
@@ -221,3 +273,5 @@
         }
     }
 }
+
+*/
