--- a/src/app/scss/_inventory.scss
+++ b/src/app/scss/_inventory.scss
@@ -57,18 +57,16 @@
                     background-repeat: no-repeat;
                 }
             }
-        }
-        .filter-input {
             input {
-                margin: 4.5%;
                 background: $white;
-                height: 31px;
+                height: 26px;
                 border: 1px solid $dark-grey;
-                width: 90%;
+                width: 83%;
                 -webkit-appearance: none;
-                border-radius: 4px;
+                border-radius: 7px;
+                padding-left: 15px;
                 font-size: $filter-select;
-                text-align: center;
+                appearance: none;
             }
         }
     }
